[package]
name = "handel"
version = "0.1.0"
authors = ["Janosch Gräf <janosch@nimiq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nimiq-bls = { path = "../core-rs-albatross/bls" }
nimiq-hash = { path = "../core-rs-albatross/hash" }
beserial = { path = "../core-rs-albatross/beserial" }
beserial_derive = { path = "../core-rs-albatross/beserial/beserial_derive" }
nimiq-collections = { path = "../core-rs-albatross/collections", features = ["bitset"] }
nimiq-block-albatross = { path = "../core-rs-albatross/primitives/block-albatross" }
log = "0.4"
simple_logger = "1.3"
tokio = "0.1"
futures = "0.1"
bytes = "0.4"
parking_lot = "0.8"
failure = "0.1"
clap = "2.33"
hex = "0.3"
rand = "0.6"
futures-cpupool = "0.1"
tokio-timer = "0.2"
